2005-03-07  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.2.0

2005-03-02  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-dialog.c (dialog_delete_event_cb): really add a return value.
	Fixes #168941

2005-03-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.92

2005-02-24  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Makefile.am: ship CommonMakefile in the package. Fixes #167215

2005-02-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.91

2005-01-30  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-auth.c: exit cleanly if the tool can't fork the backend. Closes
	#158810

2005-01-25  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.90

2005-01-21  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-filter.[ch]: added GST_FILTER_PHONE, to know whether a string
	contains only chars that could be part of a phone number

2005-01-20  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-dialog.c: Added GDK_Escape keybinding to the main dialog, so
	it may cancel as in other dialogs

2005-01-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-hig-dialog.[ch]: removed
	* Makefile.am: ditto
	* gst-auth.c, gst-dialog.c, gst-tool.c: use new GtkMessageDialog API
	for HIG dialogs

2005-01-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.4.1

2005-01-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.4

2004-12-21  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.3

2004-12-13  Carlos Garnacho Parro  <carlosg@gnome.org>

        * gst-tool.c: put error = NULL in some gconf calls, we're not caring
	about the error here.

2004-11-16  Carlos Garnacho Parro  <carlosg@gnome.org>

	* CommonMakefile: start-here seems to be definitely deprecated,
	stop installing .desktop files in $(sysconfdir)/X11/sysconfig/

2004-12-20  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-tool.c: made it not to block when su fails

2004-12-20  Carlos Garnacho Parro  <carlosg@gnome.org>
