@@ -1,3 +1,8 @@
+2005-06-23  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+        * gst-filter.c: handle too the cases where the user deletes something
+        in the filtered entry
+
 2005-03-07  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* Release 1.2.0
